[package]
name = "playground-x509-ml-dsa"
version = "0.1.0"
edition = "2021"

[dependencies]
pkcs8 = { version = "0.11.0-rc.8", features = ["pem"] }
x509-cert = { version = "0.3.0-rc.2", features = ["builder"] }
ml-dsa = { version = "0.1.0-rc.2", features = ["pkcs8"] }
hex-literal = "1"
rand = "0.10.0-rc.0"
signature = { version = "3.0.0-rc.5", default-features = false }
